2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_set_gradient),
	(murrine_set_border_gradient):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_entry),
	(murrine_draw_entry_progress), (murrine_register_style_murrine):
	* src/murrine_style.c (murrine_style_draw_box):
	* src/murrine_types.h:
	Two interesting things:
	1) Added set_border_gradient, useful in the future but not enabled yet
	2) Draw the entry progressbar, since GTK+ 2.16.0

2009-02-22  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_checkbox),
	(murrine_draw_classic_focus), (murrine_draw_focus):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_checkbox),
	(murrine_rgba_draw_menu_frame):
	Small change in rgba rounded menus, updated previous
	ChangeLog entry.

2009-02-22  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	* src/murrine_draw.c (murrine_draw_classic_focus),
	(murrine_draw_focus), (murrine_register_style_murrine):
	* src/murrine_rc_style.c (murrine_rc_style_init),
	(murrine_rc_style_parse), (murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c (murrine_style_draw_box),
	(murrine_style_init_from_rc), (murrine_style_draw_focus),
	(murrine_style_copy):
	* src/murrine_style.h:
	* src/murrine_types.h:
	First implementation of the focus drawing.
	Maybe not amazing as clearlooks's focus, but this focus is 
	compatible with much more colorschemes.
	Added focus_color option.
	The style is taken from the great Skulpture Qt 4 style.

2009-02-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):
	Less shade on prelighted scrollbar slider.

2009-02-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):