@@ -91,11 +91,6 @@ G_GNUC_INTERNAL void murrine_set_gradient (cairo_t *cr,
                                            int x, int y, int width, int height,
                                            boolean gradients, boolean alpha);
 
-G_GNUC_INTERNAL void murrine_set_border_gradient (cairo_t *cr,
-                                                  const MurrineRGB *color,
-                                                  double highlight,
-                                                  int x, int y, int width, int height);
-
 G_GNUC_INTERNAL void murrine_draw_glaze (cairo_t *cr,
                                          const MurrineRGB *fill,
                                          double glow_shade,
